Feature: Add check for Condor pool status
- Implemented a feature to display Condor pool status.
- Modified `generateConfig` to use Private DNS for `CONDOR_HOST`.
- Updated `updateNodeConfiguration` to correctly assign Private DNS.
- Ensured role tags (Main/Worker) update dynamically during Master promotion.
- Enhanced logging for better debugging and state tracking.